--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="blank_tome@4x.svg" />
+		<link rel="icon" href="/images/blank_tome@4x.svg" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
